--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -125,3 +125,9 @@ author_profile: true
     </div>
 
 </div>
+
+{% include base_path %}
+
+{% for post in site.teaching reversed %}
+  {% include archive-single.html %}
+{% endfor %}
