--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -1,11 +1,10 @@
 ---
 layout: archive
-title: "Teaching"
+title: "Teaching Experience 🎓"
 permalink: /teaching/
 author_profile: true
 ---
 
-# Teaching Experience 🎓
 
 <style>
     .teaching-section {
