change ta layout

--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -4,18 +4,9 @@ title: "Projects 🚀"
 permalink: /projects/
 author_profile: true
 ---
----
-layout: archive
-title: "Projects"
-permalink: /projects/
-author_profile: true
----
-
-
-
 <style>
     .projects-section {
-        background: linear-gradient(135deg, #e0eafc, #cfdef3);
+        background: #f9f9f9;
         padding: 50px;
         border-radius: 15px;
         margin-bottom: 50px;
@@ -156,13 +147,6 @@ author_profile: true
     </div>
 
 </div>
-
-{% include base_path %}
-
-{% for post in site.projects reversed %}
-  {% include archive-single.html %}
-{% endfor %}
-
 
 {% include base_path %}
 
