make some changes

--- a/_pages/research.html
+++ b/_pages/research.html
@@ -1,6 +1,5 @@
 ---
 layout: archive
-title: "Research"
 permalink: /research/
 author_profile: true
 ---
@@ -12,7 +11,7 @@ author_profile: true
 </head>
 <body>
 
-    <h1>Research Overview 🧑‍💻</h1>
+    <h1>Research Overview</h1>
 
     <p>
         I’m currently conducting research in the <strong>AUT Cloud Lab (LPDS)</strong> under the supervision of
