--- a/_pages/education.html
+++ b/_pages/education.html
@@ -53,6 +53,7 @@ author_profile: true
                 <li>Research and Technical Presentation 20/20</li>
             </ul>
         </div>
+    </div>
 
 </body>
 </html>
