--- a/_pages/education.html
+++ b/_pages/education.html
@@ -9,6 +9,7 @@ author_profile: true
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Education</title>
     <style>
+        /* Scoped to coursework section */
         .coursework {
             display: flex;
             flex-wrap: wrap;
@@ -18,10 +19,10 @@ author_profile: true
             flex: 1;
             min-width: 200px; /* Ensures each column has enough width */
         }
-        ul {
-            list-style-type: none; /* Remove default bullets */
+        .coursework ul {
+            list-style-type: none; /* Remove default bullets only in coursework section */
         }
-        ul li::before {
+        .coursework ul li::before {
             content: '•'; /* Custom bullet */
             margin-right: 10px;
             color: #333;
@@ -47,6 +48,10 @@ author_profile: true
                 <li>Operating Systems 17.88/20</li>
                 <li>Internet Engineering 20/20</li>
                 <li>Computer Networks 16.5/20</li>
+            </ul>
+        </div>
+        <div class="coursework-column">
+            <ul>
                 <li>Software Engineering 20/20</li>
                 <li>Database Design 17.91/20</li>
                 <li>Data Structures and Algorithms 20/20</li>
