fix reference and images

--- a/_pages/volunteer.html
+++ b/_pages/volunteer.html
@@ -47,10 +47,10 @@ author_profile: true
 
         <!-- ICPC Images -->
         <div class="icpc-images">
-            <img src="/images/site-logo" alt="ICPC Image 1">
-            <img src="/images/site-logo" alt="ICPC Image 2">
-            <img src="/images/site-logo" alt="ICPC Image 3">
-            <img src="/images/site-logo" alt="ICPC Image 4">
+            <img src="/images/2.jpeg" alt="ICPC Image 1">
+            <img src="/images/3.jpeg" alt="ICPC Image 2">
+            <img src="/images/4.jpeg" alt="ICPC Image 3">
+            <img src="/images/5.jpeg" alt="ICPC Image 4">
         </div>
     </div>
 </div>
