--- a/_pages/references.html
+++ b/_pages/references.html
@@ -146,7 +146,7 @@ author_profile: true
                 <div class="reference-name">Dr. Shirali Shahreza</div>
                 <div class="reference-role">Assistant Professor at Amirkabir University of Technology</div>
                 <div class="reference-details">
-                    Email: <span class="reference-email"><a href="mailto:rezaei@aut.ac.ir">rezaei@aut.ac.ir</a></span><br>
+                    Email: <span class="reference-email"><a href="mailto:shirali@aut.ac.ir">rezaei@aut.ac.ir</a></span><br>
                     Relationship: Algorithms and Data Structures Assistant Supervisor
                 </div>
             </div>
@@ -158,7 +158,7 @@ author_profile: true
                 <div class="reference-name">Dr. Javadi</div>
                 <div class="reference-role">Assistant Professor at Amirkabir University of Technology</div>
                 <div class="reference-details">
-                    Email: <span class="reference-email"><a href="mailto:khosravi@aut.ac.ir">khosravi@aut.ac.ir</a></span><br>
+                    Email: <span class="reference-email"><a href="mailto:sajavadi@aut.ac.ir">khosravi@aut.ac.ir</a></span><br>
                     Relationship: Cloud Computing and Operating Systems Teaching Assistant Supervisor
                 </div>
             </div>
@@ -170,7 +170,7 @@ author_profile: true
                 <div class="reference-name">Dr. Gohari</div>
                 <div class="reference-role">Professor of Algorithms</div>
                 <div class="reference-details">
-                    Email: <span class="reference-email"><a href="mailto:khosravi@aut.ac.ir">khosravi@aut.ac.ir</a></span><br>
+                    Email: <span class="reference-email"><a href="mailto:faezehgohari@gmail.com">khosravi@aut.ac.ir</a></span><br>
                     Relationship: Software Engineering and Software Testing Teaching Assistant Supervisor
                 </div>
             </div>
@@ -182,7 +182,7 @@ author_profile: true
                 <div class="reference-name">Dr. Ziaeetabar</div>
                 <div class="reference-role">Lecturer at Amirkabir University of Technology</div>
                 <div class="reference-details">
-                    Email: <span class="reference-email"><a href="mailto:khosravi@aut.ac.ir">khosravi@aut.ac.ir</a></span><br>
+                    Email: <span class="reference-email"><a href="mailto:fziaeetabar@gwdg.de">khosravi@aut.ac.ir</a></span><br>
                     Relationship: Operating Systems Teaching Assistant Supervisor
                 </div>
             </div>
