add skills part

--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -1,6 +1,5 @@
 ---
 layout: archive
-title: "Teaching Assistantships"
 permalink: /teaching/
 author_profile: true
 ---
@@ -71,7 +70,7 @@ author_profile: true
 </style>
 
 <div class="teaching-grid">
-
+    <h1>Teaching Assistantships</h1>
     <div class="teaching-card">
         <div class="card-header">Software Testing</div>
         <div class="card-body">
@@ -134,6 +133,17 @@ author_profile: true
             <p class="ta-supervisor">Supervised by <a href="https://scholar.google.com/citations?user=7bpNAlAAAAAJ&hl=en" target="_blank">Dr. Gohari</a></p>
             <p class="ta-description">
                 Taught design principles and facilitated online submissions for projects. Guided students in software development methodologies and lifecycle management.
+            </p>
+        </div>
+    </div>
+
+    <div class="teaching-card">
+        <div class="card-header">Database Design</div>
+        <div class="card-body">
+            <p class="ta-term">Spring 2024</p>
+            <p class="ta-supervisor">Supervised by <a href="https://scholar.google.com/citations?user=CCw-ockAAAAJ&hl=en" target="_blank">Dr. Pourbahman</a></p>
+            <p class="ta-description">
+                 Developed exercises and graded assignments.
             </p>
         </div>
     </div>
