--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -1,6 +1,5 @@
 ---
 layout: archive
-title: "Projects 🚀"
 permalink: /projects/
 author_profile: true
 ---
@@ -68,7 +67,7 @@ author_profile: true
 </style>
 
 <div class="projects-section">
-
+    <h1>Projects 🚀</h1>
     <div class="project-container">
         <span class="project-icon">⚙️</span>
         <a href="https://github.com/negaranabestani/fed-flow" target="_blank" class="project-title">FedFlow</a>
