--- a/_pages/references.html
+++ b/_pages/references.html
@@ -1,10 +1,8 @@
 ---
 layout: archive
-title: "References"
 permalink: /references/
 author_profile: true
 ---
-
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -103,6 +101,7 @@ author_profile: true
     </style>
 </head>
 <body>
+    <h1>References</h1>
     <div class="references-section">
         <div class="reference-item">
             <div class="timeline-circle"></div>
@@ -146,7 +145,7 @@ author_profile: true
                 <div class="reference-name">Dr. Shirali Shahreza</div>
                 <div class="reference-role">Assistant Professor at Amirkabir University of Technology</div>
                 <div class="reference-details">
-                    Email: <span class="reference-email"><a href="mailto:shirali@aut.ac.ir">rezaei@aut.ac.ir</a></span><br>
+                    Email: <span class="reference-email"><a href="mailto:shirali@aut.ac.ir">shirali@aut.ac.ir</a></span><br>
                     Relationship: Algorithms and Data Structures Assistant Supervisor
                 </div>
             </div>
@@ -158,7 +157,7 @@ author_profile: true
                 <div class="reference-name">Dr. Javadi</div>
                 <div class="reference-role">Assistant Professor at Amirkabir University of Technology</div>
                 <div class="reference-details">
-                    Email: <span class="reference-email"><a href="mailto:sajavadi@aut.ac.ir">khosravi@aut.ac.ir</a></span><br>
+                    Email: <span class="reference-email"><a href="mailto:sajavadi@aut.ac.ir">sajavadi@aut.ac.ir</a></span><br>
                     Relationship: Cloud Computing and Operating Systems Teaching Assistant Supervisor
                 </div>
             </div>
@@ -170,20 +169,33 @@ author_profile: true
                 <div class="reference-name">Dr. Gohari</div>
                 <div class="reference-role">Professor of Algorithms</div>
                 <div class="reference-details">
-                    Email: <span class="reference-email"><a href="mailto:faezehgohari@gmail.com">khosravi@aut.ac.ir</a></span><br>
+                    Email: <span class="reference-email"><a href="mailto:faezehgohari@gmail.com">faezehgohari@gmail.com</a></span><br>
                     Relationship: Software Engineering and Software Testing Teaching Assistant Supervisor
                 </div>
             </div>
         </div>
 
-              <div class="reference-item">
+        <div class="reference-item">
             <div class="timeline-circle"></div>
             <div class="reference-content">
                 <div class="reference-name">Dr. Ziaeetabar</div>
                 <div class="reference-role">Lecturer at Amirkabir University of Technology</div>
                 <div class="reference-details">
-                    Email: <span class="reference-email"><a href="mailto:fziaeetabar@gwdg.de">khosravi@aut.ac.ir</a></span><br>
+                    Email: <span class="reference-email"><a href="mailto:fziaeetabar@gwdg.de">fziaeetabar@gwdg.de</a></span><br>
                     Relationship: Operating Systems Teaching Assistant Supervisor
+                </div>
+            </div>
+        </div>
+
+
+        <div class="reference-item">
+            <div class="timeline-circle"></div>
+            <div class="reference-content">
+                <div class="reference-name">Dr. Pourbahman</div>
+                <div class="reference-role">Lecturer at Amirkabir University of Technology</div>
+                <div class="reference-details">
+                    Email: <span class="reference-email"><a href="mailto:pourbahman@aut.ac.ir">pourbahman@aut.ac.ir</a></span><br>
+                    Relationship: Database Design Teaching Assistant Supervisor
                 </div>
             </div>
         </div>
