--- a/_pages/work.html
+++ b/_pages/work.html
@@ -1,6 +1,5 @@
 ---
 layout: archive
-title: "Work Experience"
 permalink: /work/
 author_profile: true
 ---
@@ -117,7 +116,7 @@ author_profile: true
 <body>
 
     <div class="experience-section">
-
+        <h1>Work Experience</h1>
         <!-- Snapp Work Experience -->
         <div class="experience-panel">
             <div class="panel-content">
