make some minor changes

--- a/_pages/volunteer.html
+++ b/_pages/volunteer.html
@@ -44,7 +44,7 @@ author_profile: true
     <!-- First volunteer experience -->
     <div class="volunteer-container">
         <h3 class="volunteer-title">Official Member and Financing Specialist</h3>
-        <p><strong><a href="https://ceit-ssc.ir/" target="_blank" class="ssc-link">Students' Scientific Chapter</a></strong>, Amirkabir University of Technology <span style="float:right;">Apr 2023 - June 2024</span></p>
+        <p><a href="https://ceit-ssc.ir/" target="_blank" class="ssc-link">Students' Scientific Chapter</a>, Amirkabir University of Technology <span style="float:right;">Apr 2023 - June 2024</span></p>
         <ul>
             <li>Elected as an official member and finance specialist, responsible for budgeting events and liaising with sponsors.</li>
         </ul>
