make some minor changes

--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -77,7 +77,7 @@ author_profile: true
             <p class="ta-term">Fall 2024</p>
             <p class="ta-supervisor">Supervised by <a href="https://scholar.google.com/citations?user=7bpNAlAAAAAJ&hl=en" target="_blank">Dr. Gohari</a></p>
             <p class="ta-description">
-                Guided students through testing methodologies, tools, and best practices for ensuring high-quality software systems. Designed and evaluated projects, managing online submissions.
+                Guiding students through testing methodologies, tools, and best practices for ensuring high-quality software systems. Designing and evaluated projects, managing online submissions.
             </p>
         </div>
     </div>
@@ -88,7 +88,7 @@ author_profile: true
             <p class="ta-term">Spring 2024, Fall 2024</p>
             <p class="ta-supervisor">Supervised by <a href="https://scholar.google.com/citations?user=PAZOYiAAAAAJ&hl=en" target="_blank">Dr. Farbeh</a></p>
             <p class="ta-description">
-                Led the TA team and coordinated tasks, time management, and communication between students and the professor.
+                Leading the TA team and coordinating tasks, time management, and communication between students and the professor.
             </p>
         </div>
     </div>
@@ -99,7 +99,7 @@ author_profile: true
             <p class="ta-term">Spring 2024, Fall 2024</p>
             <p class="ta-supervisor">Supervised by <a href="https://scholar.google.com/citations?user=Va7RTUsAAAAJ&hl=en" target="_blank">Dr. Javadi</a> & <a href="https://www.researchgate.net/profile/Fatemeh-Ziaeetabar" target="_blank">Dr. Ziaeetabar</a></p>
             <p class="ta-description">
-                Assisted students in understanding core OS concepts like process scheduling, memory management, and system calls. Designed and evaluated class projects.
+                Assisted students in grasping fundamental operating system concepts, designed and evaluated class projects, graded exams, and conducted online TA sessions to support students' learning and academic success.
             </p>
         </div>
     </div>
@@ -132,7 +132,7 @@ author_profile: true
             <p class="ta-term">Spring 2024</p>
             <p class="ta-supervisor">Supervised by <a href="https://scholar.google.com/citations?user=7bpNAlAAAAAJ&hl=en" target="_blank">Dr. Gohari</a></p>
             <p class="ta-description">
-                Taught design principles and facilitated online submissions for projects. Guided students in software development methodologies and lifecycle management.
+                Facilitated online submissions for projects. Guided students in software development methodologies.
             </p>
         </div>
     </div>
@@ -143,7 +143,7 @@ author_profile: true
             <p class="ta-term">Spring 2024</p>
             <p class="ta-supervisor">Supervised by <a href="https://scholar.google.com/citations?user=CCw-ockAAAAJ&hl=en" target="_blank">Dr. Pourbahman</a></p>
             <p class="ta-description">
-                 Developed exercises and graded assignments.
+                 Developed exercises and graded assignments, and guided students.
             </p>
         </div>
     </div>
@@ -154,7 +154,7 @@ author_profile: true
             <p class="ta-term">Spring 2022, Fall 2022, Fall 2023</p>
             <p class="ta-supervisor">Supervised by <a href="https://sajad.shirali.ir/" target="_blank">Dr. Shirali Shahreza</a></p>
             <p class="ta-description">
-                Developed exercises, graded assignments, and guided students in problem-solving techniques using algorithms and data structures.
+                Developed exercises, created video content, graded assignments, and guided students in problem-solving techniques using algorithms and data structures.
             </p>
         </div>
     </div>
