--- a/_pages/volunteer.html
+++ b/_pages/volunteer.html
@@ -43,7 +43,7 @@ author_profile: true
 
     <!-- First volunteer experience -->
     <div class="volunteer-container">
-        <h3 class="volunteer-title">Official Member and Financing Specialist</h3>
+        <h2 class="volunteer-title">Official Member and Financing Specialist</h2>
         <p><a href="https://ceit-ssc.ir/" target="_blank" class="ssc-link">Students' Scientific Chapter</a>, Amirkabir University of Technology <span style="float:right;">Apr 2023 - June 2024</span></p>
         <ul>
             <li>Elected as an official member and finance specialist, responsible for budgeting events and liaising with sponsors.</li>
@@ -52,8 +52,8 @@ author_profile: true
 
     <!-- Head of ICPC 2023 -->
     <div class="volunteer-container">
-        <h3 class="volunteer-title">Head of ICPC 2023</h3>
-        <p><strong>Amirkabir University of Technology</strong> <span style="float:right;">Oct 2023</span></p>
+        <h2 class="volunteer-title">Head of ICPC 2023</h2>
+        <p>Amirkabir University of Technology<span style="float:right;">Oct 2023</span></p>
         <ul>
             <li>Organized the ICPC competition, a globally renowned collegiate programming contest.</li>
             <li>Managed event logistics, including scheduling, team coordination, and collaborating with sponsors.</li>
