change work layout design

--- a/_pages/work.html
+++ b/_pages/work.html
@@ -13,7 +13,7 @@ author_profile: true
       <h3>Software Engineer</h3>
       <p>
         <strong><a href="https://snapp.ir" target="_blank" style="text-decoration: underline; color: #3498db;">Snapp</a></strong>, Tehran
-        <span style="float: right;">Feb 2022 – Present</span>
+        <span style="float: right;">Jan 2022 – Mar 2024</span>
       </p>
       <ul>
         <li>Worked on Snapp’s Shared Services team, supporting critical services.</li>
@@ -73,7 +73,7 @@ author_profile: true
   }
 
   h3 {
-    font-size: 1.6em;
+    font-size: 1.5em;
     color: #3498db;
     margin-bottom: 10px;
   }
@@ -88,7 +88,7 @@ author_profile: true
   }
 
   p {
-    font-size: 1.1em;
+    font-size: 0.em;
     color: #7f8c8d;
   }
 
